force-app/main/default/objects/Opportunity/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account Tableau Link</description>
    <formula>HYPERLINK(&quot;https://eu-west-1a.online.tableau.com/#/site/heyjobs/views/ClientPerformanceOverview/ClientPerformanceReport?Company%20ID=&quot; &amp;  TEXT(Account.txtCompanyId__c) ,&quot;Tableau Link&quot;)</formula>
    <inlineHelpText>Account Tableau Link</inlineHelpText>
    <label>Tableau Link</label>
    <type>Text</type>
</CustomField>