force-app/main/default/objects/Opportunity/fields/Account_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Email__c</fullName>
    <formula>Account.Contact_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>.</inlineHelpText>
    <label>Account Contact Email</label>
    <type>Text</type>
</CustomField>