force-app/main/default/objects/Opportunity/fields/Account_Inactive_Days__c.field-meta.xml
<CustomField>
    <fullName>Account_Inactive_Days__c</fullName>
    <description>The number of days since the most recent activity was completed</description>
    <formula>ENCODED:Now() -  {!ID:Account.ActivityMetric.LastActivityDateTime}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days since the most recent activity was completed</inlineHelpText>
    <label>Account: Inactive Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>