force-app/main/default/objects/Opportunity/fields/Account_Jobs_live_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Account_Jobs_live_Inventory__c</fullName>
    <formula>0</formula>
    <inlineHelpText>Displays value from Account</inlineHelpText>
    <label>Legacy Jobs live - Inventory (Opp)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>