force-app/main/default/objects/Opportunity/fields/Account_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Lead_Score__c</fullName>
    <description>References the Account Lead Score</description>
    <formula>Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Legacy - Always Use &quot;Lead Score&quot;</inlineHelpText>
    <label>Legacy - Account Lead Score</label>
    <type>Text</type>
</CustomField>