force-app/main/default/objects/Opportunity/fields/Account_Next_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Next_Activity_Date__c</fullName>
    <description>The date of the next scheduled task or event. Only open tasks in the future are included</description>
    <formula>ENCODED:{!ID:Account.ActivityMetric.NextActivityDateTime}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date of the next scheduled task or event. Only open tasks in the future are included</inlineHelpText>
    <label>Account: Next Activity Date</label>
    <type>Date</type>
</CustomField>