force-app/main/default/objects/Opportunity/fields/Account_Owner_Aligned__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Aligned__c</fullName>
    <description>RO-1623</description>
    <formula>IF( OwnerId = Account.OwnerId , true, false)</formula>
    <label>Account Owner Aligned</label>
    <type>Checkbox</type>
</CustomField>