force-app/main/default/objects/Opportunity/fields/Account_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Source__c</fullName>
    <description>Always reflects the current Source of the related Account</description>
    <formula>TEXT(Account.AccountSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Always reflects the current Source of the related Account</inlineHelpText>
    <label>Account Source</label>
    <type>Text</type>
</CustomField>