force-app/main/default/objects/Opportunity/fields/Active_Agency_Customer_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Active_Agency_Customer_Opportunity__c</fullName>
    <description>Shows active Agency Customer contracts / RO-202</description>
    <formula>Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LegacyActive Agency Customer Opportunity</label>
    <type>Checkbox</type>
</CustomField>