force-app/main/default/objects/Opportunity/fields/Additional_Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Billing_Email__c</fullName>
    <description>For finance use. RO-479</description>
    <formula>Account.ON_EmailInvoiceCc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Zusätzliche E-Mail-Adresse für die Rechnungsstellung</inlineHelpText>
    <label>Additional Billing Email</label>
    <type>Text</type>
</CustomField>