force-app/main/default/objects/Opportunity/fields/Additional_Billing_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Billing_Information__c</fullName>
    <inlineHelpText>Weitere Informationen, die für die Rechnungsstellung relevant sind. Diese werden auch auf der Quote (Angebot), die an die/den Kund*in geht, dargestellt.</inlineHelpText>
    <label>Additional Billing Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>