force-app/main/default/objects/Opportunity/fields/Agency_flexible_framework__c.field-meta.xml
<CustomField>
    <fullName>Agency_flexible_framework__c</fullName>
    <formula>AND(
RecordType.Name = &apos;Agency Business&apos;, 
TEXT(Contract_type__c) = &apos;Flexible&apos;
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency flexible framework</label>
    <type>Checkbox</type>
</CustomField>