force-app/main/default/objects/Opportunity/fields/Allow_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Allow_Closed_Won__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Helper field to prevent manual Closed Won / RO-712</description>
    <label>Allow Closed Won</label>
    <type>Checkbox</type>
</CustomField>