force-app/main/default/objects/Opportunity/fields/Allow_Opp_Creation__c.field-meta.xml
<CustomField>
    <fullName>Allow_Opp_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Helper Field to validate if Opp Creation should be possible and block opp creations if they are not done by our custom automations
RO-2315</description>
    <label>Allow Opp Creation</label>
    <type>Checkbox</type>
</CustomField>