force-app/main/default/objects/Opportunity/fields/Annual_Contract_2_0__c.field-meta.xml
<CustomField>
    <fullName>Annual_Contract_2_0__c</fullName>
    <description>RO-1052</description>
    <formula>AND(
    ISPICKVAL(Product_Type__c, &quot;HIRE&quot;),
    NOT(ISPICKVAL(HeyPaket_Type__c,&quot;&quot;))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy - HeyPaket</label>
    <type>Checkbox</type>
</CustomField>