force-app/main/default/objects/Opportunity/fields/Annual_Contract__c.field-meta.xml
<CustomField>
    <fullName>Annual_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For the Account Managers, to mark the opportunities that are part of their bonus calculations - when +18k is signed for an annual contract.</description>
    <inlineHelpText>Mark the opportunities that are part of contracts agreed with an Annual Budget of + €18k</inlineHelpText>
    <label>Annual Contract</label>
    <type>Checkbox</type>
</CustomField>