force-app/main/default/objects/Opportunity/fields/Approval_process_recruitment_solution__c.field-meta.xml
<CustomField>
    <fullName>Approval_process_recruitment_solution__c</fullName>
    <description>RO-2093</description>
    <inlineHelpText>Wie sieht der Genehmigungsprozess für die Einführung eines neunen Tools im Unternehmen aus?</inlineHelpText>
    <label>Approval process recruitment solution</label>
    <type>TextArea</type>
</CustomField>