force-app/main/default/objects/Opportunity/fields/ATS_Name_Account__c.field-meta.xml
<CustomField>
    <fullName>ATS_Name_Account__c</fullName>
    <description>Shows the ATS Name from the related Account / RO-887</description>
    <formula>TEXT(Account.plATSName__c)</formula>
    <label>ATS Name (Account)</label>
    <type>Text</type>
</CustomField>