force-app/main/default/objects/Opportunity/fields/Average_Amount__c.field-meta.xml
<CustomField>
    <fullName>Average_Amount__c</fullName>
    <formula>If(ISPICKVAL(Segment_Opp_V02__c, &quot;Small&quot;), 2700, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>