force-app/main/default/objects/Opportunity/fields/Avg_Reach_Jobs_month__c.field-meta.xml
<CustomField>
    <fullName>Avg_Reach_Jobs_month__c</fullName>
    <description>RO - 2067
The average number of REACH jobs that will be included in the feed per month</description>
    <inlineHelpText>Die durchschnittliche Anzahl von REACH-Jobs, die pro Monat im Feed enthalten sein werden.</inlineHelpText>
    <label>Avg. # Reach Jobs/month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>