force-app/main/default/objects/Opportunity/fields/Backend_Link__c.field-meta.xml
<CustomField>
    <fullName>Backend_Link__c</fullName>
    <formula>Account.fmlCompanyBackendLink__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Enthält den Link zum Backend vom Recruiter Portal.</inlineHelpText>
    <label>Backend Link</label>
    <type>Text</type>
</CustomField>