force-app/main/default/objects/Opportunity/fields/Base_AE__c.field-meta.xml
<CustomField>
    <fullName>Base_AE__c</fullName>
    <description>RO-2858 — Renamed from &quot;Base AE&quot;. Partner Kickback 1 commission %.</description>
    <inlineHelpText>Commission % for kickback tier 1. Populated from Account on Opp creation.</inlineHelpText>
    <label>Partner Kickback 1 AE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>