force-app/main/default/objects/Opportunity/fields/Base_Volume__c.field-meta.xml
<CustomField>
    <fullName>Base_Volume__c</fullName>
    <description>RO-2858 — Renamed from &quot;Base Volume&quot;. Booking value to unlock kickback tier 1.</description>
    <inlineHelpText>Booking threshold for kickback tier 1. Populated from Account on Opp creation.</inlineHelpText>
    <label>Partner Kickback Threshold 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>