force-app/main/default/objects/Opportunity/fields/bBillingCheck__c.field-meta.xml
<CustomField>
    <fullName>bBillingCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Check</label>
    <type>Checkbox</type>
</CustomField>