force-app/main/default/objects/Opportunity/fields/bCreateCase__c.field-meta.xml
<CustomField>
    <fullName>bCreateCase__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create Case</label>
    <type>Checkbox</type>
</CustomField>