force-app/main/default/objects/Opportunity/fields/Bill_Is_Ship__c.field-meta.xml
<CustomField>
    <fullName>Bill_Is_Ship__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Rechnungsadresse entspricht der Leistungsadresse. Wenn TRUE (checked) wird auf den Angeboten und Rechnungen automatisch die Rechnungsadresse als Leistungsadresse eingetragen.</inlineHelpText>
    <label>Bill Is Ship</label>
    <type>Checkbox</type>
</CustomField>