force-app/main/default/objects/Opportunity/fields/Billed_with_AE__c.field-meta.xml
<CustomField>
    <fullName>Billed_with_AE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-135</description>
    <label>Legacy - Billed with AE?</label>
    <type>Checkbox</type>
</CustomField>