force-app/main/default/objects/Opportunity/fields/Billing_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Formula__c</fullName>
    <description>RO-1270 / Used in Quote Templates</description>
    <formula>Billing_Street__c &amp;BR()&amp;
Billing_Zip_Postal_Code__c &amp; &quot; &quot; &amp; Billing_City__c &amp;BR()&amp;
TEXT(Billing_Country_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address Formula</label>
    <type>Text</type>
</CustomField>