force-app/main/default/objects/Opportunity/fields/Billing_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Code__c</fullName>
    <inlineHelpText>Ländercode der Rechnungsadresse</inlineHelpText>
    <label>Billing Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Belgien</fullName>
            </value>
            <value>
                <fullName>Bulgarien</fullName>
            </value>
            <value>
                <fullName>Dänemark</fullName>
            </value>
            <value>
                <fullName>Deutschland</fullName>
            </value>
            <value>
                <fullName>Estland</fullName>
            </value>
            <value>
                <fullName>Finnland</fullName>
            </value>
            <value>
                <fullName>Frankreich</fullName>
            </value>
            <value>
                <fullName>Griechenland</fullName>
            </value>
            <value>
                <fullName>Grossbritannien</fullName>
            </value>
            <value>
                <fullName>Irland</fullName>
            </value>
            <value>
                <fullName>Italien</fullName>
            </value>
            <value>
                <fullName>Kroatien</fullName>
            </value>
            <value>
                <fullName>Lettland</fullName>
            </value>
            <value>
                <fullName>Liechtenstein</fullName>
            </value>
            <value>
                <fullName>Litauen</fullName>
            </value>
            <value>
                <fullName>Luxemburg</fullName>
            </value>
            <value>
                <fullName>Malta</fullName>
            </value>
            <value>
                <fullName>Niederlande</fullName>
            </value>
            <value>
                <fullName>Österreich</fullName>
            </value>
            <value>
                <fullName>Polen</fullName>
            </value>
            <value>
                <fullName>Portugal</fullName>
            </value>
            <value>
                <fullName>Rumänien</fullName>
            </value>
            <value>
                <fullName>Schweden</fullName>
            </value>
            <value>
                <fullName>Schweiz</fullName>
            </value>
            <value>
                <fullName>Slowakei</fullName>
            </value>
            <value>
                <fullName>Slowenien</fullName>
            </value>
            <value>
                <fullName>Spanien</fullName>
            </value>
            <value>
                <fullName>Tschechien</fullName>
            </value>
            <value>
                <fullName>Ungarn</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>