force-app/main/default/objects/Opportunity/fields/Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email__c</fullName>
    <inlineHelpText>E-Mail-Adresse für Rechnungsstellung</inlineHelpText>
    <label>Billing Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>