force-app/main/default/objects/Opportunity/fields/bInvoiceContactRole__c.field-meta.xml
<CustomField>
    <fullName>bInvoiceContactRole__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Contact Role</label>
    <type>Checkbox</type>
</CustomField>