force-app/main/default/objects/Opportunity/fields/BonusBudget__c.field-meta.xml
<CustomField>
    <fullName>BonusBudget__c</fullName>
    <description>Field use for the Backend Purchase link.</description>
    <inlineHelpText>Enthält den Bonus Budget €-Betrag aus der gesyncten Quote (Angebot).</inlineHelpText>
    <label>Bonus Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>