force-app/main/default/objects/Opportunity/fields/Boost_AE__c.field-meta.xml
<CustomField>
    <fullName>Boost_AE__c</fullName>
    <description>RO-2858 — Renamed from &quot;Boost AE&quot;. Partner Kickback 2 commission %.</description>
    <inlineHelpText>Commission % for kickback tier 2. Populated from Account on Opp creation.</inlineHelpText>
    <label>Partner Kickback 2 AE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>