force-app/main/default/objects/Opportunity/fields/Boost_Volume__c.field-meta.xml
<CustomField>
    <fullName>Boost_Volume__c</fullName>
    <description>RO-2858 — Renamed from &quot;Boost Volume&quot;. Booking value to unlock kickback tier 2.</description>
    <inlineHelpText>Booking threshold for kickback tier 2. Populated from Account on Opp creation.</inlineHelpText>
    <label>Partner Kickback Threshold 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>