force-app/main/default/objects/Opportunity/fields/Bulk_Invoice_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Invoice_Parent_Account__c</fullName>
    <description>RO - 2139</description>
    <inlineHelpText>Stores the Ultimate parent account for Opportunities part of bulk invoicing.</inlineHelpText>
    <label>Bulk Invoice Parent Account</label>
    <length>200</length>
    <type>Text</type>
</CustomField>