force-app/main/default/objects/Opportunity/fields/Career_Page__c.field-meta.xml
<CustomField>
    <fullName>Career_Page__c</fullName>
    <description>Request from Karin. Shown in the Path when the Stage is Qualified Prospect</description>
    <label>Career Page</label>
    <type>Url</type>
</CustomField>