force-app/main/default/objects/Opportunity/fields/Category_1_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Category_1_from_Account__c</fullName>
    <description>RO-2155</description>
    <inlineHelpText>Changes automatically update the Account (for open opps)</inlineHelpText>
    <label>Category 1 (from Account)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Provider</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>