force-app/main/default/objects/Opportunity/fields/Category_3_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Category_3_from_Account__c</fullName>
    <description>RO-2155</description>
    <inlineHelpText>Changes automatically update the Account (for open opps)</inlineHelpText>
    <label>Category 3 (from Account)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category_2_from_Account__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Category3</valueSetName>
    </valueSet>
</CustomField>