force-app/main/default/objects/Opportunity/fields/Close__c.field-meta.xml
<CustomField>
    <fullName>Close__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close</label>
    <type>Checkbox</type>
</CustomField>