force-app/main/default/objects/Opportunity/fields/Close_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Month__c</fullName>
    <description>Returns a Number of the Close Date Month</description>
    <formula>CASE(MONTH( CloseDate ), 
1, 1,
2, 2,
3, 3,
4, 4,
5, 5,
6, 6,
7, 7,
8, 8,
9, 9,
10, 10,
11, 11,
12, 12,
0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>