force-app/main/default/objects/Opportunity/fields/Comment_Quote_Acceptance_Screen__c.field-meta.xml
<CustomField>
    <fullName>Comment_Quote_Acceptance_Screen__c</fullName>
    <description>Saving comment from Quote Acceptance Screen to populate the information on Case
RO-1999</description>
    <label>Comment Quote Acceptance Screen</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>