force-app/main/default/objects/Opportunity/fields/Competitor_2_current_future__c.field-meta.xml
<CustomField>
    <fullName>Competitor_2_current_future__c</fullName>
    <description>RO-2093</description>
    <inlineHelpText>Welche Rekrutierungslösungen werden derzeit eingesetzt oder für die Zukunft in Betracht gezogen?</inlineHelpText>
    <label>Competitor 2: current &amp; future</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitors</valueSetName>
    </valueSet>
</CustomField>