force-app/main/default/objects/Opportunity/fields/Contact_Role_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if there is at least one contact role and all contact roles have roles assigned. Populated via automation
RO-1377</description>
    <inlineHelpText>Updated automatically when contact roles are assigned and all contact roles have roles.</inlineHelpText>
    <label>Contact Role Assigned</label>
    <type>Checkbox</type>
</CustomField>