force-app/main/default/objects/Opportunity/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>RO - 1631, RO - 2548</description>
    <inlineHelpText>Dies wird verwendet, um das Enddatum des bestehenden Vertrags anzugeben.</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>