force-app/main/default/objects/Opportunity/fields/Contract_received_Month__c.field-meta.xml
<CustomField>
    <fullName>Contract_received_Month__c</fullName>
    <formula>CASE(MONTH( dateTimestampContractreceived__c  ), 
1, TEXT(YEAR(dateTimestampContractreceived__c )) + &quot;.01 &quot;, 
2, TEXT(YEAR(dateTimestampContractreceived__c )) + &quot;.02 &quot;, 
3, TEXT(YEAR(dateTimestampContractreceived__c )) + &quot;.03 &quot;, 
4, TEXT(YEAR(dateTimestampContractreceived__c)) + &quot;.04 &quot;, 
5, TEXT(YEAR(dateTimestampContractreceived__c)) + &quot;.05 &quot;, 
6, TEXT(YEAR(dateTimestampContractreceived__c )) + &quot;.06 &quot;, 
7, TEXT(YEAR(dateTimestampContractreceived__c )) + &quot;.07 &quot;, 
8, TEXT(YEAR(dateTimestampContractreceived__c )) + &quot;.08 &quot;, 
9, TEXT(YEAR(dateTimestampContractreceived__c )) + &quot;.09 &quot;, 
10, TEXT(YEAR(dateTimestampContractreceived__c)) + &quot;.10 &quot;, 
11, TEXT(YEAR(dateTimestampContractreceived__c)) + &quot;.11 &quot;, 
12, TEXT(YEAR(dateTimestampContractreceived__c)) + &quot;.12 &quot;, 
NULL 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract received Month</label>
    <type>Text</type>
</CustomField>