force-app/main/default/objects/Opportunity/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>RO - 2548</description>
    <inlineHelpText>Wird verwendet, um das Startdatum eines Vertrags anzugeben.</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>