force-app/main/default/objects/Opportunity/fields/Contract_type__c.field-meta.xml
<CustomField>
    <fullName>Contract_type__c</fullName>
    <description>RO-135</description>
    <inlineHelpText>Is either “fixed” or “flexible”</inlineHelpText>
    <label>Contract type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Flexible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>