force-app/main/default/objects/Opportunity/fields/Converted_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead_ID__c</fullName>
    <description>Stores lead ID if created by lead conversion.</description>
    <inlineHelpText>Stores lead ID if created by lead conversion.</inlineHelpText>
    <label>Converted Lead ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>