force-app/main/default/objects/Opportunity/fields/CPA_Target__c.field-meta.xml
<CustomField>
    <fullName>CPA_Target__c</fullName>
    <description>RO - 2067
The CPA (cost per application) the customer would like to achieve</description>
    <inlineHelpText>Der CPA (Cost per Application), den der Kunde in seiner Reach Kampagne erreichen möchte.</inlineHelpText>
    <label>CPA Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>